--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,8 @@
  * ---------------------------------------------------
  */
 /**----------
+	0. Vendors
+		0.1 Normalize
 	1. Base
 		1.1 base
 		1.2 Fonts
@@ -25,6 +27,14 @@
 	5. Themes
 		5.1 Default Theme
 ---------------*/
+/**
+ * ---------------------------------------------------
+ * 	0.  Vendors
+ * ---------------------------------------------------
+ */
+
+/* --------------------- 1.1 Base --------------------- */ 
+@import 'vendors/normalize';
 /**
  * ---------------------------------------------------
  * 	1.  Base
@@ -66,7 +76,7 @@
  * ---------------------------------------------------
  */
 /* --------------------- 4.1 Home page --------------------- */ 
-@import 'pages/home';
+@import 'pages/index';
 
 /**
  * ---------------------------------------------------
